2004-09-27  Raja R Harinath  <rharinath@novell.com>

	* Makefile: Re-apply changes from 2004-09-14.
	(test-everything): Run tests in both profiles.

2004-09-21  Raja R Harinath  <rharinath@novell.com>

	* do-tests.pl: Print 'IGNORED' when a test is ignored.

2004-09-14  Martin Baulig  <martin@ximian.com>

	* gmcs-expect-no-error, gmcs-expect-wrong-error: Updated.

2004-09-14  Martin Baulig  <martin@ximian.com>

	* Makefile: Put the old Makefile back.

2004-09-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile (MCS) [PROFILE=default]: Force testing of 'mcs'.
	(test-everything): Remove.
	(TEST_PROFILE): New.
	(run-mcs-tests, run-gmcs-tests): Unify using TEST_PROFILE.
	(run-test-local) [PROFILE=net_2_0]: Run generics tests.

2004-09-10 Marek Safar <marek.safar@seznam.cz>

	* do-test.pl: Make report readable (I was really confuse).
	Fixed bug on my machine CR+LF in *-expect-* files. 

2004-09-07  Martin Baulig  <martin@ximian.com>

	* mcs-expect-no-error: I'm slowly getting annoyed.  Is it really
	so hard to add new tests here ?

2004-09-07  Raja R Harinath  <rharinath@novell.com>

	* cs0571-3.cs, CS0571-3-lib.cs: New tests for #59980.
	* Makefile: Update list of dlls.

2004-09-03 Marek Safar <marek.safar@seznam.cz>

	* 8 new error tests.

2004-09-03  Raja R Harinath  <rharinath@novell.com>

	* do-tests.pl: Attach $profile to log file name to make clear
	which profile caused the error.

2004-09-01 Marek Safar <marek.safar@seznam.cz>

	* 20 new tests mainly for static classes.

2004-08-27  Martin Baulig  <martin@ximian.com>

	* Makefile (test-everything): New target.

2004-08-27  Martin Baulig  <martin@ximian.com>

	* gmcs-ignore-tests: New file.  This file lists tests which should
	not be run at all because they make the compiler hang.

	* gmcs-expect-no-error, gmcs-expect-wrong-error: Updated.
	* generics-expect-no-error: Updated.

2004-08-27  Martin Baulig  <martin@ximian.com>

	* Makefile
	(run-gmcs-tests): New target to run the cs*.cs tests with gmcs.