@@ -8,6 +8,8 @@
 #
 
 cs0121-3.cs
+cs0122-5.cs
+cs0122-6.cs
 cs0164.cs
 cs0186.cs
 cs0229.cs
